--- a/PodFile
+++ b/PodFile
@@ -6,7 +6,7 @@ pod 'Kingfisher' ,'~> 3.10.2'
 pod 'ESTabBarController-swift'
 pod 'pop'
 pod 'BubbleTransition', '~> 2.0.0'
-pod 'SSCycleScrollView', '~> 2.1.0'
+pod 'LLCycleScrollView'
 pod 'Segmentio', '~> 2.1'
 pod 'JPush'
 pod 'swiftScan', '~> 1.1.0'
