--- a/DwMember/Info.plist
+++ b/DwMember/Info.plist
@@ -47,9 +47,9 @@
 	<array>
 		<string>armv7</string>
 	</array>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>使用定位?</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>使用定位?</string>
 </dict>
 </plist>
