--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 *.xcuserstate
 *.xcuserstate
 DwMember.xcworkspace/xcuserdata/wenjing.xcuserdatad/UserInterfaceState.xcuserstate
+DwMember.xcworkspace/xcuserdata/wenjing.xcuserdatad/UserInterfaceState.xcuserstate
